[package]
name = "nfs-mamont"
version = "0.1.0"
edition = "2021"
description = "A Rust NFS Server implementation"
publish = false
rust-version = "1.83.0"

[lib]
doctest = false

[dependencies]
anyhow = "1"
async-trait = "0.1.9"
byteorder = "1.4"
bytestream = "0.4"
filetime = "0.2"
futures = "0.3.21"
num-derive = "0.4"
num-traits = "0.2"
smallvec = "1.10.0"
tokio = { version = "1.0", features = ["full", "time"] }
tracing = "0.1.31"
tracing-attributes = "0.1"

[dev-dependencies]
intaglio = { version = "1.6" }
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }

[[example]]
name = "mirrorfs"
path = "examples/mirror_fs/main.rs"

[[example]]
name = "demofs"
path = "examples/demo_fs/main.rs"
